Split overworld area file Fixed a bug in option flag loading from existing rom

--- a/EnemizerLibrary/EnemizerLibrary.csproj
+++ b/EnemizerLibrary/EnemizerLibrary.csproj
@@ -96,6 +96,7 @@
     <Compile Include="DungeonObject\SubType3Object.cs" />
     <Compile Include="EnemyRandomizer\Dungeon\DungeonEnemyRandomizer.cs" />
     <Compile Include="EnemyRandomizer\Overworld\OverworldArea.cs" />
+    <Compile Include="EnemyRandomizer\Overworld\OverworldAreaCollection.cs" />
     <Compile Include="EnemyRandomizer\Overworld\OverworldAreaConstants.cs" />
     <Compile Include="EnemyRandomizer\Overworld\OverworldEnemyRandomizer.cs" />
     <Compile Include="EnemyRandomizer\Overworld\OverworldGroupRequirementCollection.cs" />
