Added symbol export to assembly build Import symbols into c# project to avoid hard coding addresses for tables that need to be updated by Enemizer

--- a/EnemizerLibrary/EnemizerLibrary.csproj
+++ b/EnemizerLibrary/EnemizerLibrary.csproj
@@ -155,6 +155,7 @@
     <Compile Include="DungeonObject\SubType2Object.cs" />
     <Compile Include="Utilities.cs" />
     <Compile Include="Version.cs" />
+    <Compile Include="XkasSymbols.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
