--- a/EnemizerLibrary/EnemizerLibrary.csproj
+++ b/EnemizerLibrary/EnemizerLibrary.csproj
@@ -96,6 +96,7 @@
     <Compile Include="DungeonObject\SubType3Object.cs" />
     <Compile Include="EnemyRandomizer\Dungeon\DungeonEnemyRandomizer.cs" />
     <Compile Include="EnemyRandomizer\Overworld\OverworldArea.cs" />
+    <Compile Include="EnemyRandomizer\Overworld\OverworldAreaCollection.cs" />
     <Compile Include="EnemyRandomizer\Overworld\OverworldAreaConstants.cs" />
     <Compile Include="EnemyRandomizer\Overworld\OverworldEnemyRandomizer.cs" />
     <Compile Include="EnemyRandomizer\Overworld\OverworldGroupRequirementCollection.cs" />
@@ -154,6 +155,7 @@
     <Compile Include="DungeonObject\SubType2Object.cs" />
     <Compile Include="Utilities.cs" />
     <Compile Include="Version.cs" />
+    <Compile Include="XkasSymbols.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
