Added code to attempt to "reset" enemizer roms back to pre-enemizer state and rerun enemizer with the embedded settings. Needs more work because the generated files are not 100% the same as the input.

--- a/EnemizerLibrary/EnemizerLibrary.csproj
+++ b/EnemizerLibrary/EnemizerLibrary.csproj
@@ -53,6 +53,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BossRandomizer\Boss\GTArmosBoss.cs" />
+    <Compile Include="BossRandomizer\Boss\GTLanmolaBoss.cs" />
+    <Compile Include="BossRandomizer\Boss\GTMoldormBoss.cs" />
+    <Compile Include="BossRandomizer\VanillaBossRandomizer.cs" />
     <Compile Include="BossRandomizer\Pool\BossPool.cs" />
     <Compile Include="BossRandomizer\Boss\TrinexxBoss.cs" />
     <Compile Include="BossRandomizer\Boss\EmptyBoss.cs" />
