Changed custom sword/shield graphics dropdown to load from files in respective folders Modified config to not export the selected sword/shield graphics Modified config to use string filename for sword/shield graphics Fixed bugs with room/ow graphics block selection

--- a/EnemizerGui/Enemizer.csproj
+++ b/EnemizerGui/Enemizer.csproj
@@ -333,6 +333,9 @@
     <Content Include="sword_gfx\normal.gfx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="shield_gfx\rupee.gfx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
