--- a/EnemizerTests/packages.config
+++ b/EnemizerTests/packages.config
@@ -2,11 +2,12 @@
 <packages>
   <package id="Microsoft.Net.Compilers" version="2.3.2" targetFramework="net462" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
-  <package id="xunit" version="2.2.0" targetFramework="net461" />
+  <package id="xunit" version="2.3.1" targetFramework="net462" />
   <package id="xunit.abstractions" version="2.0.1" targetFramework="net461" />
-  <package id="xunit.assert" version="2.2.0" targetFramework="net461" />
-  <package id="xunit.core" version="2.2.0" targetFramework="net461" />
-  <package id="xunit.extensibility.core" version="2.2.0" targetFramework="net461" />
-  <package id="xunit.extensibility.execution" version="2.2.0" targetFramework="net461" />
-  <package id="xunit.runner.visualstudio" version="2.2.0" targetFramework="net461" developmentDependency="true" />
+  <package id="xunit.analyzers" version="0.7.0" targetFramework="net462" />
+  <package id="xunit.assert" version="2.3.1" targetFramework="net462" />
+  <package id="xunit.core" version="2.3.1" targetFramework="net462" />
+  <package id="xunit.extensibility.core" version="2.3.1" targetFramework="net462" />
+  <package id="xunit.extensibility.execution" version="2.3.1" targetFramework="net462" />
+  <package id="xunit.runner.visualstudio" version="2.3.1" targetFramework="net462" developmentDependency="true" />
 </packages>
