WIP (adding options to GUI for batch generation) WIP (fixing glitched boss rando) Modified mimic room to remove barrier Excluded some extra enemies from mimic room

--- a/EnemizerLibrary/EnemizerLibrary.csproj
+++ b/EnemizerLibrary/EnemizerLibrary.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Graph\LogicalBoss.cs" />
     <Compile Include="Graph\Node.cs" />
     <Compile Include="Graph\OverworldAreaNode.cs" />
+    <Compile Include="Graph\OverworldGlitchedGraphData.cs" />
     <Compile Include="Graph\Requirement.cs" />
     <Compile Include="Graph\RomChests.cs" />
     <Compile Include="Graph\RoomNode.cs" />
