--- a/EnemizerWebApi.Tests/packages.config
+++ b/EnemizerWebApi.Tests/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net462" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net462" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
   <package id="xunit" version="2.0.0" targetFramework="net45" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
   <package id="xunit.assert" version="2.0.0" targetFramework="net45" />
