--- a/EnemizerCLI/packages.config
+++ b/EnemizerCLI/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineParser" version="1.9.71" targetFramework="net462" />
+  <package id="Microsoft.Net.Compilers" version="2.3.2" targetFramework="net462" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
 </packages>
