--- a/EnemizerGui/packages.config
+++ b/EnemizerGui/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Microsoft.Net.Compilers" version="2.3.2" targetFramework="net462" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
+  <package id="NLog" version="4.4.12" targetFramework="net462" />
 </packages>
