--- a/EnemizerTests/packages.config
+++ b/EnemizerTests/packages.config
@@ -9,5 +9,6 @@
   <package id="xunit.core" version="2.3.1" targetFramework="net462" />
   <package id="xunit.extensibility.core" version="2.3.1" targetFramework="net462" />
   <package id="xunit.extensibility.execution" version="2.3.1" targetFramework="net462" />
+  <package id="xunit.runner.console" version="2.3.1" targetFramework="net462" developmentDependency="true" />
   <package id="xunit.runner.visualstudio" version="2.3.1" targetFramework="net462" developmentDependency="true" />
 </packages>
